--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lodash": "^4.17.3",
     "react": "15.4.1",
     "react-native": "0.39.2",
+    "react-native-htmlview": "^0.5.0",
     "react-native-router-flux": "^3.35.0",
     "react-redux": "^5.0.1",
     "redux": "^3.6.0",
